# fmi_adapter

./: .clang-format  3rd-party-licenses.txt  CONTRIBUTING.md  CPPLINT.cfg  NOTICE  README.md  codecov.yml  dependencies.repos  pre-commit.hook  run_clang-format_in-place.bash
.github/workflows/: build_and_test.yml
fmi_adapter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
fmi_adapter/doc/: high-level_architecture.pptx
fmi_adapter/include/fmi_adapter/: FMIAdapter.h  FMIAdapter.hpp  FMIAdapterNode.hpp
fmi_adapter/launch/: fmi_adapter_node.launch  fmi_adapter_node.launch.py
fmi_adapter/src/: fmi_adapter_node.cpp  fmi_adapter_sim_clock_node.cpp
fmi_adapter/src/fmi_adapter/: FMIAdapter.cpp  FMIAdapterNode.cpp
fmi_adapter/test/: fmi_adapter.test  runTests.cpp
fmi_adapter/test/fmi_adapter/: FMIAdapterTest.cpp
fmi_adapter/test/fmu/: TransportDelay.fmu  transportDelay.fmu
fmi_adapter_examples/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
fmi_adapter_examples/launch/: damped_pendulum.launch  damped_pendulum_with_transport_delay.launch  damped_pendulum_with_transport_delay.launch.py  damped_pendulum_with_transport_delay_as_composed_node.launch.py  simple_damped_pendulum.launch  simple_damped_pendulum.launch.py
fmi_adapter_examples/share/: DampedPendulum.fmu  DampedPendulum.mo
