<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fmi_adapter</name>
  <version>0.1.5</version>
  <description>Wraps FMUs for co-simulation</description>

  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/fmi_adapter</url>
  <url type="repository">https://github.com/boschresearch/fmi_adapter_ros2</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>rcutils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
