<?xml version="1.0"?>
<package format="2">
  <name>fmi_adapter</name>
  <version>1.0.3</version>
  <description>Wraps FMUs for co-simulation</description>

  <maintainer email="ralph.lange@de.bosch.com">Ralph Lange</maintainer>
  <author email="ralph.lange@de.bosch.com">Ralph Lange</author>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/fmi_adapter</url>
  <url type="repository">https://github.com/boschresearch/fmi_adapter</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>git</build_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <test_depend>rostest</test_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
